WIP
-----------------------------
* Command line arguments
  - Add "-h, --help" argument, which shows all available command line arguments.
  - Add "-s, --single-instance" argument, which allows multiple instances of TinyPedal
    to be running at same time by use "-s 0" or "--single-instance 0".
    Default is single instance only.
  - Add "Single instance mode" info to log output.
  - See User Guide "Command line arguments" section for details.

2.17.2 (2024-08-08)
-----------------------------
* Brake bias Widget
  - [New]Add brake migration display, which shows real-time brake migration change,
    as commonly seen in LMH and LMDh classes.
    Note, brake migration is calculated based on brake input and brake pressure
    telemetry data, and is affected by pedal force setting from car setup and
    electric braking allocation of specific vehicle.
    To get accurate brake migration reading, it is necessary for brake pedal
    to reach fully pressed state for at least once while entering track to recalibrate
    brake pressure scaling for brake migration calculation.
    It is normally not required to do manually, as game's auto-hold brake assist is on by default.
    However if auto-hold brake assist is off, or the APP was reloaded while player was already on track,
    then it is required to do a full braking for at least once to get accurate brake migration reading.
  - Add "electric_braking_allocation" option for calculating brake migration
    under different electric braking allocation from specific vehicle.
    Note, vehicle that has not electric braking, or has disabled regeneration, is not affected by this option.
    Incorrect allocation value will result wrong brake migration reading from vehicle that has electric braking activated.
    Set value to "-1" to enable auto-detection, which automatically checks whether electric braking is activated
    on either axles while braking, and sets allocation accordingly.